Yusuf and the French

--- a/Relationships among North Africa.page
+++ b/Relationships among North Africa.page
@@ -5,6 +5,7 @@ seeking to increase their autonomy at the expense of the empire was a
 phenomenon common to many of the outer provinces of the empire, just
 as revolutions became a relatively frequent occurrence at the center." (Coller 57)
     - In 1798, "To ensure the safety of their shipping, the French sought to maintain their alliances with the Barbary States, expecting them to act independently of the Ottoman Porte. However the Directory drastically underestimated the strength of the bonds connecting these further provinces to the sultan" (Coller 71)
+    - [Yusuf Karamanli]()'s takeover of Tripoli was also threatened by the French Revolution: " Yusuf’s concerns really awoke “when in learning of the invasion by the French, he discovered that the Moors had enthusiastically taken to wearing the revolutionary cockade, and that according to rumour, those in Derna, which is itself in insurrection, were doing the same.”48 After rupturing with murderous violence the ruler’s contract to the Muslim community, disobeying the sultan/caliph, and betraying his own family, Yusuf now feared that his own people might rise against him under the symbols of liberty, equality, and fraternity" (Coller 72)
 
 - [Richard O'Brien]() reports that the Turkish government gifted Algiers with recruits and naval stores. He suggests two possible motives for this move:
     1. "to strengthen the hands of this State, the principal political Redoubt of the Ottoman Empire" or
