--- a/Relations with Algiers.page
+++ b/Relations with Algiers.page
@@ -1,4 +1,5 @@
 - In 1797, [David Humphreys]() instructed to use French as mediators for negotiations with Algiers; he solicited their help, but he also deputed [Joseph Donaldson]() to negotiate and Donaldson chose not to wait for the French to sign a treaty (*Gazette of the United States*, 25 January 1797)
+    - *Gazette* reports that it turned out for the best that the French weren't involved, as the consul wasn't in the dey's good graces at the moment
 
 ## Why is Algiers seen as the "principal" Barbary state?
 -   Possibly because of French ties or sympathy for more egalitarian form of government? See IAN COLLER, “Barbary and Revolution: France and North Africa, 1789-1798,” in French Mediterraneans, Transnational and Imperial Histories (University of Nebraska Press, 2016), 67-69, http://www.jstor.org/stable/j.ctt1d8h8t4.7.
