--- a/Economy.page
+++ b/Economy.page
@@ -36,6 +36,8 @@ From [Thomas Jefferson]()'s [first inaugural address](https://jeffersonpapers.pr
         - Up to 24 American ships in Leghorn at once in 1801, 2/3 unarmed
 	- Cathcart therefore suggests that American ships must travel in convoy past Gibraltar (possibly with Swedish protection if no American protection is available)
 
+- Notes from Lisbon about trade: "Trade from America, as you will readily conceive, is extremely dull"; notes that Lisbon has to get wheat from North Africa and doesn't get corn at all (*Philadelphia Gazette*, 1 April 1797)
+
 - [Possible hint at how important Med commerce is:](http://infoweb.newsbank.com.ezproxy.bpl.org/iw-search/we/HistArchive/?p_product=EANX&p_theme=ahnp&p_nbid=S61N4ENEMTQ0MzQ0MzY1NC4yNjM1MDk6MToxMzoxOTIuODAuNjUuMTE2&p_action=doc&s_lastnonissuequeryname=5&d_viewref=search&p_queryname=5&p_docnum=43&p_docref=v2:109E8167B4F23EB8@EANX-10BC2AE497A4D370@2377074-10BC2AE80781F388@2-10BC2AE90EF1B6D0@From%20Lisbon)
 
 - [John Shaw]() asserts that "I conseive -- our Commerc[e] with Italy will always be of great Importance to U S -- we will mostly finde good marts & good returns" (BW2:75, 2 March 1802)
