confederation of Barbary states

--- a/Tripolitan strategy.page
+++ b/Tripolitan strategy.page
@@ -14,6 +14,7 @@ board" (18 September 1802)
 - "I Suspect many Vagabonds will enter that Service for want of employment in the Privateering line, this only will enable them to put many Cruizers to Sea, being themselves destitute of good Sailors" (10 December 1801, BW1:633)
 
 # Joining forces with other Barbary States
+- [Richard O'Brien]() to [James Madison](), 26 September 1801: "That from Tunis There is reports that, The american frigates is intended to act against this Regency—That further Tunis and Tripoli is inviteing The dey as their bully not to admit of The Custom of Blockade that if it is acquised to by Algiers and Tunis, That it will become a Custom and will on like Occasions be very prejudicial to Algiers and Tunis. Therefore I Consider The deys request as a Confederatione of the Regencies of Algiers, Tunis and Tripoli—to do away the Custom of Blockading ports of Barbary. On this subject of informations I have it from a shure Channel— the deys moorish secretary" (The Papers of James Madison Digital Edition, J. C. A. Stagg, editor. Charlottesville: University of Virginia Press, Rotunda, 2010. http://rotunda.upress.virginia.edu/founders/JSMN-02-91-02-0162 [accessed 25 Nov 2016])
 - BW1:615: [Richard Dale]() is concerned that Tripoli is trying to get the other Barbary States to join forces against the USA, and that he has already succeeded in convincing Tunis to join (6 Nov 1801)
 
 # Deception
