--- a/Algiers.page
+++ b/Algiers.page
@@ -1,3 +1,4 @@
+- 26 September 1801: [Richard O'Brien]() to [James Madison](): "The Regency seems to be Very discontent at present and is Continually growling on acct. of The Regalia or Stores or the annuities not arriveing. They are nearly of Opinion that I have been feeding Them with a String of lies." (The Papers of James Madison Digital Edition, J. C. A. Stagg, editor. Charlottesville: University of Virginia Press, Rotunda, 2010. http://rotunda.upress.virginia.edu/founders/JSMN-02-91-02-0162 [accessed 25 Nov 2016])
 - BW1:617-18: [Richard O'Brien]() records that the dey has requested 500 mahogany boards of 1-4 inches, as well as long planks and spikes (7 November 1801)
 - BW1:620-21: [Richard O'Brien]() accepts $30,000 from [Richard Dale]() as payment for the annual stipend to the Dey
 - BW2:232: SecNav informs [Richard Valentine Morris]() that the [USS *New York*]() is being dispatched with $30,000 for Algiers in lieu of stores (13 August 1802)
