--- a/Tripoli.page
+++ b/Tripoli.page
@@ -8,6 +8,7 @@
 Negotiations with Tripoli sometimes occurred through the other Barbary governments. As Algiers was the strongest of the four, it was also the most willing to step in as third party (for a price).
 
 ### Algiers
+- [James Leander Cathcart]() warns against using Algiers as mediator: "the interference of the Dey of Algiers will never militate in favor of the United States, tho: their is a very great probability that he will interfere in favor of his brother pirate of Tripoli, especially as we have manifestly the advantage of that Tyrant." (10 August 1801, The Papers of James Madison Digital Edition, J. C. A. Stagg, editor. Charlottesville: University of Virginia Press, Rotunda, 2010. http://rotunda.upress.virginia.edu/founders/JSMN-02-91-02-0115 [accessed 25 Nov 2016])
 -   462: Letter to [James Leander Cathcart](), 10 May 1802: Tripoli tried to negotiate a treaty with the USA through Algiers (ASP2FR2: *Barbary powers. Communicated to Congress on the 15th December, 1802.*)
 -   463: [Richard O'Brien]() to Sec of State, 1 Feb 1802
     -   Algerine government wants O'B to settle with Tripoline ambassador but requires some money to facilitate the negotiations?
