convoy needed because war will be soon

--- a/Convoy.page
+++ b/Convoy.page
@@ -42,6 +42,7 @@ what is worse, Slavery", 15 July 1802
 - BW2:215: [Daniel McNeill]() in the [USS *Boston*]() doesn't even make a real effort to corral the merchant ships for convoy: at Naples he makes clear his determination to sail in one day despite American merchants asking him to wait for 3 or 4; [Charles Wadsworth]() feels certain that at other Spanish ports the outcome will be the same. Wadsworth wishes they would stay 3 or 4 days in order to give him a chance to write to upcoming ports, but McNeill will have none of it (28 July 1802)
 
 ## Benefits/necessity of convoy
+- BW1:450: [James Leander Cathcart]() writes a circular to the Mediterranean consuls: I "request you to continue to Keep our vessels in Port, and by no means to permit any of them to sail unless under Convoy as I expect every Instt that War will be declared against the United States." (11 May 1801)
 - "It was requisite That the Essex should convoy out of this sea. The american Vessels so long detained on acct of the Threatenings of Tripoli and The Snarlings of Algiers--& murmors of Tunis." --[Richard O'Brien]() to Secretary of State, September 26, 1801 (BW1:582)
 - BW2:50-51: [Richard Dale]() recommends that ships at Leghorn wait for [USS *Philadelphia*]() to arrive for convoy duty because he has received intelligence that 3 Tripolitan corsairs are abroad, 6 February 1802
 - BW2:183-84: [Richard Valentine Morris]() recommends ships wait for convoy at Cadiz if planning to go through the Straits of Gibraltar, seeing as the relations with Morocco have deteriorated significantly, 25 June 1802
