war with Algiers

--- a/Relations with Algiers.page
+++ b/Relations with Algiers.page
@@ -5,7 +5,7 @@
 -   Possibly because of French ties or sympathy for more egalitarian form of government? See IAN COLLER, “Barbary and Revolution: France and North Africa, 1789-1798,” in French Mediterraneans, Transnational and Imperial Histories (University of Nebraska Press, 2016), 67-69, http://www.jstor.org/stable/j.ctt1d8h8t4.7.
 
 
-
+- BW1:451-52: [Richard O'Brien]() writes to SecState that the USA is "two &c a half Years in arrears in the Annuities we are threatened with war if The Stores does not arrive Shortly" (12 May 1801)
 
 - BW2:212: SecState sends to [James Leander Cathcart]() $30,000, whihc he hopes Algiers will accept in lieu of $30,000 worth of stores, and he requests Cathcart try to negotiate for money instead of stores as payment henceforth (27 July 1802)
 - BW2:289: The dey of Algiers refuses to accept [James Leander Cathcart]() as a replacement for [Richard O'Brien]() as consul; "he wanted here an american with a clean face. That he would never accept of any such character and that he would write a letter by Capt Morris [[Andrew Morris]()] to the President of The U States and for me to explain fully his Motives for objecting to receive Mr Cathcart. that he was an Enemie to Algiers and tripoli and of course not a fit person as agent for the U States in Barbary" (11 October 1802) 
