--- a/Communications.page
+++ b/Communications.page
@@ -1,4 +1,5 @@
 ## Communications with Washington
+- 12 May 1801: [Richard O'Brien]() writes to SecState: "The Consuls in barbary has neither Money or Credit. and the Government of the U. States pays no attention to our Communications it is 10 Months That I have not had any letter from the department of State War Sir will shortly be the result of detention and neglect" (BW1:451-452)
 - 4 May 1803: SecNav writes to [Richard Valentine Morris](): I have not heard from You since the 30th Novr 1802, but I will not permit myself to suppose that You have not written since that period,yet it is a subject of serious concern that we have not heard from You. I presume it would be superfluous to remind You of the absolute necessity of your writing frequently and keeping us informed of all your movements" (BW2:396)
 - 30 August 1802: Notable that the president [Thomas Jefferson]() learns about the situation with [James Simpson]() in Morocco from the newspapers: "should the newspaper accounts prove true that Simpson is recalled to Marocco & 6. months given for explanations" (TJ, http://rotunda.upress.virginia.edu/founders/TSJN-01-38-02-0285 [accessed 25 Oct 2016])
 
