--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -40,6 +40,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
     - BW2:46: Dale writes to Soderstrom that he has ordered the [USS *Boston*]() to act in conjunction with the Swedes off Tripoli, and he offers some advice to Soderstrom about how an attack might be made on the port, 2 February 1802 
 
 ### Denmark
+- 15 May 1801: [James Leander Cathcart]() writes to [Nicholas Nissen]() with a laundry list of things Cathcart would like Nissen to do for him since Cathcart has no standing in the court of Tripoli (BW1:453-54)
 - 28 August 1801: Danish commodore will not swap information with [Richard Dale](), though [Nicholas Nissen]() has been a help to the squadron (BW1:562)
 - 10 May 1802: [Nicholas Nissen]() writes to [James Leander Cathcart]() about the state of affairs between Sweden and Tripoli (BW2:148)
     - Treaty negotiations don't seem to be going well
