Britain and Algiers

--- a/Relations with Algiers.page
+++ b/Relations with Algiers.page
@@ -1,3 +1,5 @@
+- In 1794, the *Philadelphia Gazette* published notes from a session of Congress: "The first of these was, whether the Algerines acted from their own impulse in this business. In that case, they were known to be in the habit of selling a peace; and if they are willing to do so, he fancied that it might be purchased for less money than the armament would cost. On the other hand, if they do not act from their own impulse, but upon the instigation of Britain, we may depend upon it, that they cannot be bought. Britain will keep them hostile." (Philadelphia Gazette, 7 February 1794, America's Historical Newspapers)
+
 - In 1797, [David Humphreys]() instructed to use French as mediators for negotiations with Algiers; he solicited their help, but he also deputed [Joseph Donaldson]() to negotiate and Donaldson chose not to wait for the French to sign a treaty (*Gazette of the United States*, 25 January 1797)
     - *Gazette* reports that it turned out for the best that the French weren't involved, as the consul wasn't in the dey's good graces at the moment
 
