--- a/Instruction.page
+++ b/Instruction.page
@@ -1,1 +1,4 @@
 - Not seen as a "real" mission in some ways: 20 May 1801--"One great object expected from this Squadron is, the instruction of our young men: so that when their more active services shall hereafter be required, they may be capable of defending the honor of their Country. It is particularly requisite, that they should be made acquainted with the coasts & Harbours of the Mediterranean, where their services in all probability will frequently be required" (BW1:465)
+
+
+- M148: 24 April 1802: [John Shaw]() commander of [USS *George Washington*]() writes of his officers to the Secretary of the Navy: "My Midshipmen have gained considerable knowledge this Voyage being, but few in No. they had severe duty to perform they have been very ambitious and merit my warmest Esteem"
