--- a/Convoy.page
+++ b/Convoy.page
@@ -36,6 +36,7 @@ what is worse, Slavery", 15 July 1802
     - Be careful where you anchor because of bad winter weather
     - Write to upcoming consuls asking them to have any ships wishing convoy ready to go when he arrives
 - Lt. [John Shaw]() had to write to the prime minister of the Two Sicilies to ask whether a ship that had been detained by that government would be available to sail with his convoy due to leave at the first fair wind, 7 January 1802 (BW2:14)
+    - M148: Thomas Hill, supercargo of the brig Traveller writes to John Shaw, 7 January 1802: "This government talk seriously of taking my Cargo of Oil I write this to beg the favour of your Interference in my behalf not being properly represented here, I think it would be best for the Application to come through the French Minister and your writing him a few lines on this subject would perhaps insure his more ready Interferance you might state that the Brig had sailed from Gallipoli bound to Hambrug and had merely stoped here for your Convoy and having received your Sailing orders is under your Immediate Protection"
     - In the end, Shaw said that if the ship would not be released in time for the convoy, which was the last of the season, the ship and its cargo would have to be abandoned (and the USA would be on the hook for the damages) (BW2:22)  
 - [John Shaw]() arrives at Leghorn to find that almost all the commercial ships had already sailed without waiting for him to convoy them, despite [Richard Dale]()'s warning that Tripolitan cruisers were out; the 3 that did stay for the convoy wouldn't keep up, so Shaw just let them go (BW2:57), 9 February 1802
     - Shaw later writes: "I should not be the least surprised if -- some capture -- was maid -- as our American Merchant Vessles is running in all directions -- with out the smallest protection. (In fact Generally speaking, the[y] pay but very little attention to Convoy I apprehend the[y] will repent -- when its to late" (BW2:76, 2 March 1802)
@@ -66,3 +67,6 @@ what is worse, Slavery", 15 July 1802
 - BW2:381: [USS *Chesapeake*]() convoyed one vessel from Leghorn to Palermo, 3 November 1802
 - BW3:23: [USS *John Adams*]() convoys 6 vessels from Barcelona to Gibraltar, 3 September 1803
 - BW3:50: [Edward Preble]() orders [William Bainbridge]() and the [USS *Philadelphia*](), along with the [USS *Vixen*](), to convoy ships from Gibraltar to Malaga and then to Malta (16 September 1803)
+- M148: [Charles Stewart]() takes 6 vessels under convoy from Gibraltar, October 1801
+    - Cargoes include brandies, wine, and fruit
+    - Destinations include New York, London, Alexandria, and Salem
