convoy to Gibraltar

--- a/Convoy.page
+++ b/Convoy.page
@@ -70,3 +70,4 @@ what is worse, Slavery", 15 July 1802
 - M148: [Charles Stewart]() takes 6 vessels under convoy from Gibraltar, October 1801
     - Cargoes include brandies, wine, and fruit
     - Destinations include New York, London, Alexandria, and Salem
+- M148: 4 January 1804: [USS *Argus*]() convoys 2 ships from Leghorn to Gibraltar (Letter from Isaac Hull to SecNav (Robert Smith). 26 January 1804)
