Murray takes charge

--- a/Alexander Murray.page
+++ b/Alexander Murray.page
@@ -1,3 +1,4 @@
+- Issued orders to [Samuel Barron](), [William Bainbridge]() and [Daniel McNeill]() upon arrival in the Med (BW2:150, 10 May 1802)
 - Called "that old woman" Murray
 - Not a good captain, from all accounts; fractious and imperious to other officers and diplomats
 - Seems to have been deaf, according to [Daniel Carmick](): "Capt. Murray (being hard of Hearing) had no idea of the Dissentions there were on board his Ship" (BW2:295)
