--- a/Secondary source notes.page
+++ b/Secondary source notes.page
@@ -1,2 +1,10 @@
+### International connections
+
 - Shulim, Joseph I. “Thomas Jefferson Views Napoleon.” *The Virginia Magazine of History and Biography* 60, no. 2 (1952): 288–304.
     - "The United States was a part of the Old World... The strength of young America lay in its ability to exploit the national rivalries in Europe." (291)
+
+### Politics
+
+- Carson, David A. “Jefferson, Congress, and the Question of Leadership in the Tripolitan War.” *The Virginia Magazine of History and Biography* 94, no. 4 (October 1986): 409–24.
+    - "After Congress passed this measure, it never gained--or even attempted to gain--control over American relations with the Barbary powers. That control rested with Jefferson until he left office and can only be explained by the attitude of indifference held by the majority in Congress toward the pirates. Losses from depredations did not outweigh profits from trade, and such incidents were therefore removed from the immediate interests of many in the legislative branch. Congress as a body did not share the degree of Jefferson's outrage over national humiliation by the powers of North Africa, and it was more than willing to abdicate leadership in this affair to the president. Although the president privately acknowledged that he would not take lightly the powers granted to him by the Seventh Congress, Jefferson's personal dominion over relations with the Barbary states was nearly complete by early 1802." (415)
+
