--- a/Relations with Tunis.page
+++ b/Relations with Tunis.page
@@ -49,3 +49,5 @@
 
 ## Opinions about the relationship
 - BW2:384: [Richard Valentine Morris]() believes that a rupture between Tunis and the United States is likely, considering that the "Northern Powers" (Scandinavia?) have agreed to his terms rather than fight, but the USA will not agree to his terms (30 March 1803)
+- BW3:4: [George Davis]() reports that "perfect tranquility existed at this moment; that he had exerted himself considerably since he resided
+at Tunis; and that he was happy his efforts had been crowned with success." (3 September 1803)
