Philadelphia has a broken pintle

--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -20,6 +20,7 @@ Accidents to ships or people were no small matter when the squadron was deployed
 - BW2:403: [USS *New York*]() has an explosion of powder in its store room, 25 April 1803
     - The gunners' stores were destroyed; hospital stores, pursers' stores, and marine clothing were damaged
     - 8 men very badly burned, "a number of whom are so shockingly burnt that their lives are despair'd of"---4 of them eventually died
+- BW3:47: [USS *Philadelphia*]() breaks the pintle of her rudder, 15 September 1803
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97). (See also [Death by violence]().)
