relations between diplomats

--- a/Front Page.page
+++ b/Front Page.page
@@ -38,6 +38,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Race]()
 - [Reports about Barbary forces]()
 - [Relationships among North Africa]()
+- [Relations between diplomats]()
 - [Relations with government at home]()
 - [Relations with merchants and civilians]()
 - [Relations with other Barbary states]()
