Preble on blockade

--- a/Strategy.page
+++ b/Strategy.page
@@ -31,7 +31,7 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
     - 18 September 1802: As Murray is leaving the blockade, he communicates with the Swedish admiral, who plans to stay on station until 15 October and then leave until May; in the interim, providing [Convoy]() service to American and Swedish vessels (BW2:278)
 - [Richard Valentine Morris]() is censured by the navy for not maintaining the blockade; he argues that he chose to interpret his orders (which were given with considerable latitude) as being first and foremost about the *ends* of protection of American commerce, and less about the *means* of doing so (the blockade)
     - "Did the secretary [of the navy] mean that the Commodore should persist in the project of a blockade, though it should become evident to demonstration, that the property of our merchants would be thereby sacrificed, and our seamen be led into captivity?" (RVM18)
-
+- [Edward Preble]() is still invested in the blockade: he orders [William Bainbridge]() in the [USS *Philadelphia*](), along with the [USS *Vixen*](), to  "maintain (during the season, in which it may be safely done) an effectual Blockade of that place as can be done with the force you have with you; and annoy the enemy by all the means in your power . . . You are not to sufFer the vessels of any nation to enter, or have commerce with Tripoli, but you have a right to treat as an enemy, whoever attempts to enter that place, or carry any thing to it, without your leave, while it is blockaded by you" (BW3:50, 15 September 1803)
 
 
 ### [Blockade effectiveness]()
