--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -21,6 +21,7 @@ Accidents to ships or people were no small matter when the squadron was deployed
     - The gunners' stores were destroyed; hospital stores, pursers' stores, and marine clothing were damaged
     - 8 men very badly burned, "a number of whom are so shockingly burnt that their lives are despair'd of"---4 of them eventually died
 - BW3:47: [USS *Philadelphia*]() breaks the pintle of her rudder, 15 September 1803
+    - [Edward Preble]() asks Captain Otway, commissioner at Gibraltar, for permission to receive repairs for the Philadelphia at Gibraltar (BW3:51, 16 September 1803)
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97). (See also [Death by violence]().)
