--- a/Strategy.page
+++ b/Strategy.page
@@ -21,6 +21,7 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 - Continuingly vague instructions: "Considering the varying aspects of our affairs in the Mediterranean it would at this distance be hghly improper to lay you under absolute orders as to the precise disposition of your Squadron. You will therefore distribute them in such manner ss in your judgment will most effectually afford to our Commerce the proposed protection. But it will I trust, be in your power to emplo one of the frigates constantly in convoying our Merchantmen from Cadiz and another in convoying them from Malaga. And as Convoyed Vessels are liable to be dispersed in the Gut during Calms, the Enterprize might there meet each convoy for the purpose of keeping the Emperor's Boats in check." (SecNav to [Richard Valentine Morris](), 27 August 1802, BW2:258) See [Convoy](), [Communications]()
 - BW2:291: [James Leander Cathcart]() and [Richard Valentine Morris]() agree that it's more important to keep a presence off Morocco than to continue to enforce the blockade until May or June of the next year, given the unrest with the Moroccans (12 October 1802)
 
+## [Cruise 3](): [Edward Preble]()
 
 # Blockade
 - [Legal definition of blockade]()
