war disrupts supplies

--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -55,7 +55,7 @@ One of the constant questions for the squadron was whether to get supplies from 
     - 17 October 1803: *Citizen*
     - 8 November 1803: *William and Mary*
     - 10 January 1804: *Woodrop Sims*
-
+- War in Europe disrupts supply from Med: [Edward Preble]() notes: "It is absolutely necessary that every Article which composes our ration's should be sent out from the United States as they cannot, in consequence of the War between England and France be purchased at Gibralter and even if they could the prices at present are 50 pr Cent higher than in time of peace; Candles and Molasses have heretofore been much wanted by the other squadron, they are articles that cannot be procured, on any terms in this Country" (BW3:58, 18 September 1803) 
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
