--- a/Weather.page
+++ b/Weather.page
@@ -24,6 +24,7 @@ seamen went overboard with the rigging & were lost." (See also [Physical acciden
 - BW2:356: [Henry Wadsworth]() records that " it has been a continual gale: The Deck directly over my Cot leaks very much, of course my bed & bedding are much wet as the Element water is continually in boisterous weather washing over the Gun Deck: at 12 my Friend Cram will turn out to keep his watch when I will turn into his Cot which hangs in a dry place: As for me being officer of the Signals- I keep no watch, which I assure is very agreeable as we expect much Stormy & Tempestuous weather during our Cruize off Tripoly, whither we are bound" (31 January 1803)
 - BW2:521: Two sailors on board the [USS *John Adams*]() are slightly injured by a "thunderbolt"--ship struck by lightning? (27 August 1803)
 - BW3:50: [Edward Preble]() to [William Bainbridge](): "As soon as the Season makes it dangerous to cruise on the Coast of Tripoli you may harbor at Malta until you hear from me, or until it is the proper weather for cruising" (15 September 1803)
+- BW3:65: [Edward Preble]() orders [Charles Stewart]() to cruise off Tripoli until the weather turns bad; "I do expect that you do go out occasionally and shew yourself off Tripoli even in that season when the Weather is most severe, as it will have a good effect." (19 September 1803)
 
 ## In America
 - BW2:502: Both the [USS *Constitution*]() and the [USS *Argus*]() are delayed in preparations because of rain, 1 August 1803
