--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -72,6 +72,7 @@
 - BW3:60: [Alcayde Hashash]() writes to [James Simpson]() that the naval captains are welcome at Tangier or Tetuan, but that Simpson cannot be alone with them (18 September 1803)
 - BW3:63: [Edward Preble]() reports that an American vessel [the *Hannah*] has been captured and brought to Mogadore; he tells [Richard Somers]() that he is authorized to bring in vessels belonging to the bashaw of Tripoli OR the emperor of Morocco (19 September 1803)
 - BW3:64: [Edward Preble]() leaves orders for [Charles Stewart]() that he is specifically to target the *Maimona*, as well as to warn all merchant vessels that the USA is at war with Morocco (19 September 1803)
+- BW3:68: [James Simpson]() writes to Alcayde Hashash that [Edward Preble]() had come to negotiate when he heard of the governor of Mogadore seizing an American vessel, and giving orders to continue to take American vessels, at which time he left Tangier to cruise; "I submit to Your Excy's consideration whether these be Acts of Peace or War." (21 September 1803)
 
 ## Peace again
 - M148: 24 January 1804: [Isaac Hull]() records upon arrival in Tangier: I "am happy to inform you, that every thing remains peacable at that place, and that nothing has happened worth notice, since Commodore Preble left this station. The Emperors ships are all dismantled, and laid up at Sallee, and Larash, and no attempt has been made, to Equip any of them for sea, in the absence of the Squadron." ([Isaac Hull]() to SecNab Robert Smith)
