--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -74,6 +74,8 @@
 - BW3:64: [Edward Preble]() leaves orders for [Charles Stewart]() that he is specifically to target the *Maimona*, as well as to warn all merchant vessels that the USA is being targeted by Morocco (19 September 1803)
 - BW3:68: [James Simpson]() writes to Alcayde Hashash that [Edward Preble]() had come to negotiate when he heard of the governor of Mogadore seizing an American vessel, and giving orders to continue to take American vessels, at which time he left Tangier to cruise; "I submit to Your Excy's consideration whether these be Acts of Peace or War." (21 September 1803)
     - Hashash writes that anything taken at Mogadore will be returned and he will be on the hook for any losses; and that Preble is welcome at Tangier or Tetuan anytime because the USA and Morocco are at peace (BW3:69, 22 September 1803)
+- BW3:73: [Anthony Terry]() writes to [Thomas Appleton]() that he has heard a report that an English vessel saw a "Moorish Frigate" with 4 American prizes (21 September 1803)
+
 
 ## Peace again
 - M148: 24 January 1804: [Isaac Hull]() records upon arrival in Tangier: I "am happy to inform you, that every thing remains peacable at that place, and that nothing has happened worth notice, since Commodore Preble left this station. The Emperors ships are all dismantled, and laid up at Sallee, and Larash, and no attempt has been made, to Equip any of them for sea, in the absence of the Squadron." ([Isaac Hull]() to SecNab Robert Smith)
