--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -75,6 +75,7 @@
 - BW3:68: [James Simpson]() writes to Alcayde Hashash that [Edward Preble]() had come to negotiate when he heard of the governor of Mogadore seizing an American vessel, and giving orders to continue to take American vessels, at which time he left Tangier to cruise; "I submit to Your Excy's consideration whether these be Acts of Peace or War." (21 September 1803)
     - Hashash writes that anything taken at Mogadore will be returned and he will be on the hook for any losses; and that Preble is welcome at Tangier or Tetuan anytime because the USA and Morocco are at peace (BW3:69, 22 September 1803)
 - BW3:73: [Anthony Terry]() writes to [Thomas Appleton]() that he has heard a report that an English vessel saw a "Moorish Frigate" with 4 American prizes (21 September 1803)
+- BW3:74: Secretary of State of Morocco (Selawy) writes to [James Simpson]() that he should come to Tangier with the [*Mirboka*]() and possibly the [*Meshouda*](), when the emperor gets there, and listen only to the emperor and no one else; he warns, though, " beware of delays for this will be a great matter for you and for all those who support you and speak well of you here - dont be slack or deficient in this matter of consequence for yourself." (24 September 1803)
 
 
 ## Peace again
