--- a/Weather.page
+++ b/Weather.page
@@ -26,6 +26,7 @@ seamen went overboard with the rigging & were lost." (See also [Physical acciden
 - BW3:50: [Edward Preble]() to [William Bainbridge](): "As soon as the Season makes it dangerous to cruise on the Coast of Tripoli you may harbor at Malta until you hear from me, or until it is the proper weather for cruising" (15 September 1803)
 - BW3:65: [Edward Preble]() orders [Charles Stewart]() to cruise off Tripoli until the weather turns bad; "I do expect that you do go out occasionally and shew yourself off Tripoli even in that season when the Weather is most severe, as it will have a good effect." (19 September 1803)
 - BW3:71: [Edward Preble](): "Adverse winds keeps me from Tanger Bay. I am endeavouring to reach it, but I find it hard striving against wind & Current" (22 September 1803)
+- BW3:86: [Edward Preble]() provides assistance to an English brig, HMS Childers, a dispatch ship for England with letters from Lord Nelson, when a sudden squall carried away its topmasts (21 September 1803)
 
 ## In America
 - BW2:502: Both the [USS *Constitution*]() and the [USS *Argus*]() are delayed in preparations because of rain, 1 August 1803
