--- a/Convoy.page
+++ b/Convoy.page
@@ -41,6 +41,7 @@ what is worse, Slavery", 15 July 1802
 - [John Shaw]() arrives at Leghorn to find that almost all the commercial ships had already sailed without waiting for him to convoy them, despite [Richard Dale]()'s warning that Tripolitan cruisers were out; the 3 that did stay for the convoy wouldn't keep up, so Shaw just let them go (BW2:57), 9 February 1802
     - Shaw later writes: "I should not be the least surprised if -- some capture -- was maid -- as our American Merchant Vessles is running in all directions -- with out the smallest protection. (In fact Generally speaking, the[y] pay but very little attention to Convoy I apprehend the[y] will repent -- when its to late" (BW2:76, 2 March 1802)
 - BW2:215: [Daniel McNeill]() in the [USS *Boston*]() doesn't even make a real effort to corral the merchant ships for convoy: at Naples he makes clear his determination to sail in one day despite American merchants asking him to wait for 3 or 4; [Charles Wadsworth]() feels certain that at other Spanish ports the outcome will be the same. Wadsworth wishes they would stay 3 or 4 days in order to give him a chance to write to upcoming ports, but McNeill will have none of it (28 July 1802)
+- BW3:90: When [Richard Somers]() arrives in Malaga, where he has been asked to come to provide convoy, he finds only one vessel, the *Phoenix*; that vessel ended up in the rocks near Malaga on the seventh day of the journey (it's pretty obvious Somers is irritated when he notes this) (26 September 1803)
 
 ## Benefits/necessity of convoy
 - BW1:450: [James Leander Cathcart]() writes a circular to the Mediterranean consuls: I "request you to continue to Keep our vessels in Port, and by no means to permit any of them to sail unless under Convoy as I expect every Instt that War will be declared against the United States." (11 May 1801)
@@ -67,6 +68,7 @@ what is worse, Slavery", 15 July 1802
 - BW2:381: [USS *Chesapeake*]() convoyed one vessel from Leghorn to Palermo, 3 November 1802
 - BW3:23: [USS *John Adams*]() convoys 6 vessels from Barcelona to Gibraltar, 3 September 1803
 - BW3:50: [Edward Preble]() orders [William Bainbridge]() and the [USS *Philadelphia*](), along with the [USS *Vixen*](), to convoy ships from Gibraltar to Malaga and then to Malta (16 September 1803)
+- BW3:90: [Richard Somers]() takes one vessel from Malaga to Gibraltar, sort of, arrived in Gibraltar 26 September 1803
 - M148: [Charles Stewart]() takes 6 vessels under convoy from Gibraltar, October 1801
     - Cargoes include brandies, wine, and fruit
     - Destinations include New York, London, Alexandria, and Salem
