--- a/Communications.page
+++ b/Communications.page
@@ -13,6 +13,7 @@
 - 13 July 1803: SecNav orders [Edward Preble]() to maintain contact with the diplomats in the other Barbary states (BW2:476)
 - 1 August 1803: [James Leander Cathcart]() writes to [Richard Valentine Morris]() with a dizzying account of all the places and ways he tried to get to somewhere that he could meet up with Morris, only to not be able to actually connect with him (BW2:503)
 - 19 September 1803: [James Simpson]() writes that he has received information from [John Rodgers]() about the *Meshouda* that would have affected his actions: "if I had been possessed before [of this information], matters respecting her, would have been in a Very different State, to what they are" (though he doesn't elaborate on how things would have been different) (BW3:62)
+- 28 September 1803: [Nicholas Nissen]() wants to remain incognito: "Make what ever use you please of this intelligence but do not implicate me nor say you receiv'd it from any person at Tripoli, it is a fact as well known at Malta as here." (BW3:92)
 
 ## Communications amongst the squadron
 - Communications were terribly slow even though the space the squadron occupied was not that large
