--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -84,6 +84,7 @@
 - BW3:96: Preble writes, "I have no doubt but this quarrel will eventually be for our advantage, as I do not believe his Imperial Majesty will be disposed to War with us again, & we shall get clear of having any thing to do with Ashash the former Governor of Tanger who has ever been opposed to our Interest." (1 October 1803)
 
 ## Peace again
+- BW3:99: [Tobias Lear]() announces that [James Simpson]() has been freed from his captivity and all is well with Morocco (3 October 1803)
 - M148: 24 January 1804: [Isaac Hull]() records upon arrival in Tangier: I "am happy to inform you, that every thing remains peacable at that place, and that nothing has happened worth notice, since Commodore Preble left this station. The Emperors ships are all dismantled, and laid up at Sallee, and Larash, and no attempt has been made, to Equip any of them for sea, in the absence of the Squadron." ([Isaac Hull]() to SecNav Robert Smith)
 
 # Other nations' relations with Morocco
