--- a/Convoy.page
+++ b/Convoy.page
@@ -69,6 +69,7 @@ what is worse, Slavery", 15 July 1802
 - BW3:23: [USS *John Adams*]() convoys 6 vessels from Barcelona to Gibraltar, 3 September 1803
 - BW3:50: [Edward Preble]() orders [William Bainbridge]() and the [USS *Philadelphia*](), along with the [USS *Vixen*](), to convoy ships from Gibraltar to Malaga and then to Malta (16 September 1803)
 - BW3:90: [Richard Somers]() takes one vessel from Malaga to Gibraltar, sort of, arrived in Gibraltar 26 September 1803
+- BW3:100: [USS *Siren*]() orders to convoy vessels from Gibraltar to 20 leagues west of Cape Spartel (3 October 1803)
 - M148: [Charles Stewart]() takes 6 vessels under convoy from Gibraltar, October 1801
     - Cargoes include brandies, wine, and fruit
     - Destinations include New York, London, Alexandria, and Salem
