ill climate of Tripoli

--- a/Science.page
+++ b/Science.page
@@ -27,6 +27,7 @@
 - BW2:382: [USS *Chesapeake*]() stuck in Malta from 7 December 1802 until 25 December, as a result of "influenza, [which] deterred me from risking the increase of their complaint, by exposing them to the inclemency of the weather" 
 - BW2:373: [Alexander Murray]() reports that he and some of his crew have been stricken with ship fever on the passage back to the United States (11 March 1803)
     - BW2:374: SecNav orders [Thomas Tingey]() to remove the sick men from the [USS *Constellation*]() to the [USS *General Greene*]() immediately, and the *General Greene* must then be removed from the vicinity of the other ships so that the ship fever doesn't spread (16 March 1803)
+- BW3:103-4: [William Bainbridge]() on the [USS *Philadelphia*](): "Having from 20 to 30 sick on board, this number with 13 left at Gibralter has reduced the force of our ship considerably, was a powerful reason for me to clear my ship as much as possible before I attempted the bad coast & ill climate of Tripoli" (4 October 1803)
 
 ## [Dealing with disease]()
     
