--- a/Economy.page
+++ b/Economy.page
@@ -43,6 +43,7 @@ From [Thomas Jefferson]()'s [first inaugural address](https://jeffersonpapers.pr
 - [John Shaw]() asserts that "I conseive -- our Commerc[e] with Italy will always be of great Importance to U S -- we will mostly finde good marts & good returns" (BW2:75, 2 March 1802)
 
 - BW2:191: [James Leander Cathcart]() estimates that Mediterranean commerce has never been so strong, but that it is under threat because of lack of convoy: "From the returns of our consuls you will be informed of the extent of our commerce in this sea, which never was so valuable, as it was at the period and since the bashsw of Tripoli commenced hostilities. I have seen twenty-four sail of American vessels in this port at once last year, two-thirds of whom were unarmed" (4 July 1802). 
+- BW3:105: log of [USS *Constitution*]() notes 21 sail in one hour passing through the straits of Gibraltar. Not all American, but still, a good sense of how busy commerce was (4 October 1803)
 
 ## Barriers to commerce: corsair tactics
 - BW1:602: Report that some Tripoline corsairs have taken English papers and Minorcan crews in order to avoid search and seizure by the American squadron, 24 October 1801
