collision between New York and Siren

--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -22,6 +22,8 @@ Accidents to ships or people were no small matter when the squadron was deployed
     - 8 men very badly burned, "a number of whom are so shockingly burnt that their lives are despair'd of"---4 of them eventually died
 - BW3:47: [USS *Philadelphia*]() breaks the pintle of her rudder, 15 September 1803
     - [Edward Preble]() asks Captain Otway, commissioner at Gibraltar, for permission to receive repairs for the Philadelphia at Gibraltar (BW3:51, 16 September 1803)
+- BW3:122: [Charles Stewart]() reports a collision between the [USS *New York*]() and his ship, the [USS *Siren*](): "This morning about 11 OClock the United States Frigate New York Capt Rodgers, hove out a Sigl to speak us with which we complied, but on thier bearing down she ran Aboard of us, and carried away every thing from our bows, even to the Anchor which was broke in two, fortunately no person's was hurt on board the Siren except one man who I fear will loose his hand by the unfortunate circumstance - The New York lost her lower yards and what other damage I do not know" (10 October 1803) 
+
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97). (See also [Death by violence]().)
