--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -90,6 +90,7 @@
 - BW3:115: [James Simpson]() encourages [Edward Preble]() to offer the [*Mirboka*]() in exchange for the [*Hannah*]() and any other American prisoners, suggesting he'd get the better end of the deal because the *Mirboka* is a piece of junk (8 October 1803)
 - BW3:118: Emperor of Morocco sets American ships and crews at liberty and declares peace to be restored, 8 October 1803
 - BW3:119: [Edward Preble]() responds to Simpson's arguments by agreeing and releasing both the *Mirboka* and the *Meshouda* (8 OCtober 1803)
+- BW3:123: [Edward Preble]() and [Tobias Lear]() go on shore to meet the emperor; the *Mirboka* arrives in Tangier (10 October 1803)
 - M148: 24 January 1804: [Isaac Hull]() records upon arrival in Tangier: I "am happy to inform you, that every thing remains peacable at that place, and that nothing has happened worth notice, since Commodore Preble left this station. The Emperors ships are all dismantled, and laid up at Sallee, and Larash, and no attempt has been made, to Equip any of them for sea, in the absence of the Squadron." ([Isaac Hull]() to SecNav Robert Smith)
 
 # Other nations' relations with Morocco
