--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -10,6 +10,8 @@ Passports were a sticking point between the USA and all of the Barbary regencies
 
 (This also leads me to believe that the volume of ship traffic was not extraordinarily high, if they could issue a passport to every single ship coming into the Med.)
 
+- Note that Matar describes a passport-type system between European nations and Morocco as early as 1635; other treaties followed with similar provisions for other Barbary states (*Europe Through Arab Eyes*, 12)
+
 - Example of using passports for diplomatic force: [Richard O'Brien]() refused to issue passports to Algiers for Tripolitan ships docked in an Algerian port; therefore he did not wish to ask the Dey of Algiers for a passport for the *Peace and Plenty*, delivering tribute payments to Tunis. Therefore, the *George Washington* had to convoy the *Peace and Plenty* to Tunis in order to prevent capture.
     - O'Brien did not like this; he wanted to show "him and his Ministry both Turkish and Jewish ... that we finally would make force to be our passport." (BW1:616, 8 Nov 1801)
     - 
